kubia/service-kubia.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32111
  selector:
    app: kubia
