kubia/ingress-kubia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  tls:
  - hosts:
    - kubia.local
    secretName: tls-secret
  rules:
  - host: kubia.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia
            port:
              number: 443
